<resources>
    <string name="app_name">E - IQRA</string>
    <string name="title_menu_1">Membantu dalam mempelajari huruf hijaiyah</string>
    <string name="regist_now">Daftar Sekarang</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_email">Enter your email</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_name">Name</string>
    <string name="hint_name">Enter your name</string>
    <string name="your_web_client_id">924005665443-55nql9o8d231dgom3jvkr3ra5kg6odo2.apps.googleusercontent.com</string>
    <string name="title_greeting">Hello %1$s</string>
    <string name="button_logout_name">Logout</string>
    <string name="app_logo_contentDescription">logo app</string>
    <string name="instruction_link">Register Here</string>
    <string name="instruction_login">Don\'t have an account yet ?</string>
    <string name="login_btn_title">login</string>
    <string name="instruction_register">Already have an account ?</string>
    <string name="instruction_link_register">Login Here</string>
    <string name="judul_artikel">Judul</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_doa">Text Doa</string>
    <string name="text_latin">Text Latin</string>
    <string name="arti_doa">Arti</string>
    <string name="translate">Terjemahan</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_canvas">Canvas</string>
    <string name="result_image">Hasil Canvas</string>
    <string name="analyze">Analisis</string>
    <string name="analyze_title">Analyze</string>
    <string name="content_description_galeryAccess">btn_galery_access</string>
    <string name="canvas_done">Done</string>
    <string name="reset_canvas">Reset Canvas</string>
    <string name="toggle_size">Layout Mode</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
    <string name="article">Article</string>
    <string name="search">Cari</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="explain1">Mulai perjalanan belajar huruf hijaiyah dengan cara yang menyenangkan.</string>
    <string name="next">Berikutnya</string>
    <string name="drawing">Pelajari dengan Menggambar Langsung</string>
    <string name="explain2">Pelajari huruf hijaiyah dengan cara menggambar langsung, lebih interaktif dan menyenangkan!</string>
    <string name="quiz_feature">Uji Pengetahuan</string>
    <string name="explain3">Uji pemahaman Anda melalui quiz interaktif yang menantang</string>
    <string name="learning">Temukan Doa dan Pengetahuan Islam</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="draw_your_answer">Draw your answer</string>
    <string name="clear">Clear</string>
    <string name="next_quest_multiple">Ke Soal Berikutny</string>
    <string name="next_quest">Next</string>
    <string name="question_image">Question Image</string>
    <string name="learn_doa">Pelajari Doa untuk Sehari-hari</string>
    <string name="learn_asma">Yuk Pelajari Asmaul Husna</string>
    <string name="terjemahan_asmaul_husna">Terjemahan Asmaul Husna</string>
    <string name="asmaul_husna">Asmaul Husna</string>
    <string name="latin_asmaul_husna">Latin Asmaul Husna</string>
    <string name="title_learn">Pelajari</string>
    <string name="coba_sekarang">Coba Sekarang</string>
</resources>