<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/doaDetailFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.main.ui.home.detail.DoaDetailFragment">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="-16dp"
    android:layout_marginStart="-16dp"
    android:layout_marginEnd="-16dp">

        <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_back_96"
        android:layout_gravity="start"
        android:padding="8dp"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewDoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_artikel"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewArab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewDoa"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/text_doa"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLatin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_latin"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewArab"/>

    <TextView
        android:id="@+id/textViewArti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arti_doa"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLatin"/>

    <TextView
        android:id="@+id/textViewTerjemahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewArti"/>
</androidx.constraintlayout.widget.ConstraintLayout>
